<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">零零食</string>
	<string name="price">价格</string>
	<string name="market_price">市场价</string>
	<string name="already_first_page">已经是第一页了 ~</string>
	<string name="already_last_page">已经是最后一页了 ~</string>
	<string name="personal_center">个人中心</string>
	<string name="key_tracking_mode">key_tracking_mode</string>
	
	<string name="favorites">收藏夹</string>
	<string name="add_like_success">添加收藏成功~</string>
	<string name="remove_like_success">取消收藏成功~</string>
	<string name="like_is_null">收藏夹中没有东西哦~</string>
	<string name="favorites_aimaya">哎嘛呀~这也太荒凉了~</string>
	<string name="favorites_go">看到喜欢的就收藏起来吧</string>
	
	<string name="back">返回</string>
	<string name="login">登录</string>
	<string name="clicklogin">点击登录</string>
	<string name="submit">提交</string>
	<string name="save">保存</string>
	<string name="register">注册</string>
	<string name="username">用户名</string>
	<string name="email">邮箱</string>
	<string name="password">密码</string>
	<string name="forget_password">忘记密码?</string>
	<string name="register_new_account">注册新帐号</string>
	<string name="Third_party_account_login">第三方账号登录</string>
	<string name="qq_login">QQ帐号登录</string>
	<string name="sina_login">微博账号登录</string>
	<string name="username_rule">用户名: 4&#8211;30个字符,支持中英文,数字,下划线</string>
	<string name="password_rule">密码: 6&#8211;16个字符</string>
	<string name="email_rule">邮箱: 请使用真实电子邮箱注册</string>
	<string name="username_can_not_be_empty">用户名不能为空</string>
	<string name="password_can_not_be_empty">密码不能为空</string>
	<string name="email_can_not_be_empty">邮箱不能为空</string>
	<string name="username_can_not_matched_the_rule">用户名格式 为4&#8211;30个字符,支持中英文,数字,下划线</string>
	<string name="email_can_not_matched_the_rule">邮箱格式不正确</string>
	<string name="password_can_not_matched_the_rule">密码格式不正确</string>
	<string name="new_password_can_not_matched_the_rule">新密码格式不正确</string>
	<string name="user_name_already_exists">用户名已经被注册,请更换用户名~</string>
	<string name="user_name_not_exists">用户名不存在</string>
	<string name="user_name_can_not_match_password">用户名和密码不匹配</string>
	<string name="email_name_already_exists">邮箱已经存在</string>
	<string name="reset_password">重设密码</string>
	<string name="set_username">设置用户名</string>
	<string name="setting">设置</string>
	<string name="save_setting">保存设置</string>
	<string name="set_password">更改密码</string>	
	<string name="current_password">当前密码</string>
	<string name="new_password_can_not_empty">新密码不能为空</string>
	<string name="edit_password_success">更改密码成功~</string>
	<string name="edit_setting_success">更新用户信息成功~</string>
	<string name="saving_setting">正在更新设置~</string>
	<string name="saving_password">正在更新密码~</string>
	<string name="token_error">密钥错误,请重新登录~</string>
	
	
    <string name="error_data">数据异常</string>
    <string name="load_data">努力加载数据~</string>
	<string name="server_exception_occurs">服务器发生异常,请联系开发者</string>
	<string name="parsing_data_exception_occurs">解析数据发生错误,请联系开发者</string>
	<string name="save_session_error">保存 登录信息错误,请联系开发者</string>
	<string name="check_your_network_environment">网络不给力,请检查网络连接~</string>
	<string name="post_data_error">发送数据出错,请联系开发者~</string>
	<string name="get_server_data_error">获取服务器返回数据出现异常</string>
	
	
	<string name="account_register_success">账号注册成功~</string>
	<string name="account_login_success">登陆成功~</string>
	<string name="account_logout_success">登出成功~</string>
	<string name="please_login">请先登录~</string>
	<string name="exit_current_accout">你确定要退出当前账号吗?</string>
	<string name="yes">确定</string>
	<string name="cancel">取消</string>
	<string name="sending_request">正在发送请求</string>
	<string name="verifying_account">正在验证账号~</string>
	<string name="registering_account">正在注册帐号~</string>
	<string name="gender">性别: </string>
	<string name="male">男</string>
	<string name="female">女</string>
	<string name="other">其他</string>
    <string name="send_email_error">发送邮件失败,请联系开发者~</string>
    <string name="enter_verify_code">输入验证码</string>
    <string name="verify_code_can_not_empty">验证码不能为空</string>
    <string name="verify_code_has_been_sent">验证码已经发送到注册邮箱,请注意查收~</string>
    <string name="verify_code_error">验证码不正确</string>
    <string name="set_new_password">设置新密码</string>
    <string name="new_password">新密码</string>
    <string name="set_success_go_login">设置成功,正在重新登录</string>
    <string name="register_server_error">注册失败,服务器异常~</string>
    <string name="verifying">正在验证~</string>
   	<string name="setting_password">正在设置密码~</string>
    <string name="verifying_username">正在验证用户名~</string>
   	<string name="password_error">密码不正确~</string>
   	<string name="sorry_qq">抱歉,暂时不支持QQ帐号登录~</string>
   	
	<string name="push_setting">推送设置</string>
	<string name="share_app">推荐给小伙伴</string>
	<string name="hot_app">热门应用推荐</string>
	<string name="i_want_tucao">我要吐槽</string>
	<string name="logout">退出当前帐号</string>
	
	
    <string name="load_categories_failed">加载分类失败,请检查网络~</string>
    <string name="load_products_failed">加载商品失败,请检查网络~</string>
    <string name="no_more_data">没有数据~</string>
    <string name="refresh_list_failed">刷新类表失败,请检查网络~</string>
    
    
    <string name="delete">删除</string>
    <string name="turn_on_push">开启推送</string>
    <string name="sound">声音</string>
    <string name="vibrate">震动</string>
    <string name="quite_time">安静时段</string>
    <string name="push_content_setting">推送内容定制</string>
    <string name="push_keyword_setting">推送关键词定制</string>
    <string name="enter_keyword">请输入关键字</string>
    <string name="keyword_can_not_empty">关键词不能为空</string>
    <string name="keyword_exists">关键词已经存在</string>
    <string name="keyword_format_error">关键词不能包含特殊字符</string>
    <string name="get_registration_error">获取设备标识失败,请联系开发者</string>
    <string name="sync_push_setting_network_error">同步推送设置失败,请检查网络~</string>
    <string name="sync_push_setting_server_error">同步推送设置失败,请联系开发者~</string>
    <string name="sync_push_setting_success">同步推送设置成功~</string>
    <string name="sync_push_setting">正在同步推送设置~</string>
    
    
    <string name="i_want_say">我想说</string>
    <string name="send">发送</string>
    <string name="sending">数据正在发送中~</string>
    <string name="enter_feekback_msg">请输入吐槽信息</string>
    <string name="send_msg_error">发送信息失败~</string>
    <string name="scan_qrcode">扫描二维码,轻松安装应用</string>
    <string name="sending_mail">正在发送验证邮件~</string>
    
    
    <string name="take_photo">拍照</string>
    <string name="pick_photo">从相册选择</string>
    <string name="memory_card_does_not_exists">内存卡不存在</string>
    <string name="user_login_auth_error">用户登录验证信息出错,请重新登录~</string>
    <string name="upload_photo_error">上传图片到服务器失败,请联系开发者~</string>
    <string name="update_photo_success">更新头像成功~</string>
    <string name="uploading_photo">正在上传图片~</string>
    <string name="boy">♂</string>
    <string name="girl">♀</string>
    
    <string name="setting_success">设置成功</string>
    <string name="preview">预览</string>
    <string name="apply">应用</string>
    
    <string name="more">更多</string>
    <string name="aboutus">关于我们</string>
    <string name="version_update">版本更新</string>
    <string name="set_color">配色方案</string>
    <string name="unknown">未知</string>
    <string name="checking_update">正在检查更新~</string>
    <string name="lastest_verson">已是最新版本~</string>
    <string name="found_new_verson">发现新版本</string>
    <string name="whether_to_update">是否更新?</string>
    <string name="update_content">更新内容:</string>
    <string name="y">是</string>
    <string name="n">否</string>
    <string name="scroll_close">滑动关闭页面</string>
    <string name="swipe_left">从左向右</string>
    <string name="swipe_right">从右向左</string>
    <string name="swipe_botton">从下往上</string>
    <string name="swipe_all">支持所有</string>
    
    <string name="app_desc">零零食 带你淘尽天下零食</string>
    <string name="subject">专题</string>
    
    <string name="volley_network_error">网络错误,请检查网络连接~</string>
    <string name="volley_server_error">服务器返回错误响应~</string>
    <string name="volley_auth_failure_error">执行请求时，身份验证失败~</string>
    <string name="volley_parse_error">无法解析服务器的响应信息~</string>
    <string name="volley_no_connection_error">没有网络连接~</string>
    <string name="volley_timeout_error">请求超时,请检查网络~</string>
</resources>
