<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center_horizontal"
    android:background="@drawable/white_shape_dialog"
    android:padding="20dp">
    
    <Button 
        android:id="@+id/take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_style_alert_dialog_button"
        android:text="@string/take_photo"
        />
    
    <Button 
        android:id="@+id/pick_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_style_alert_dialog_button"
        android:text="@string/pick_photo"
        />
    
    <Button 
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_style_alert_dialog_cancel"
        android:text="@string/cancel"
        />
</LinearLayout>
