<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/v1_login_background">
    
	<RelativeLayout 
        android:id="@+id/menu"
        android:orientation="vertical"
        android:background="@color/v1_actionbar" 
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">
        <Button 
            android:id="@+id/back" 
            android:layout_centerVertical="true" 
            android:layout_marginLeft="@dimen/menu_margin_left" 
            android:textSize="@dimen/menu_back_text" 
            android:textColor="@color/v1_menu_back_text"  
            android:background="@drawable/selector_btn_back" 
            android:layout_width="@dimen/menu_back_width" 
            android:layout_height="@dimen/menu_back_height" 
            android:text="@string/back" />
        <TextView 
            android:layout_centerInParent="true" 
            android:textSize="@dimen/menu_title" 
            android:textColor="@color/v1_menu_title"  
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/register" />
   </RelativeLayout>
   
	<EditText 
	    android:id="@+id/username"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/input_height"
	    android:hint="@string/username_rule"
	    android:textSize="@dimen/input_text"
	    android:layout_marginTop="@dimen/input_margin_top"
	    android:layout_marginLeft="@dimen/input_margin_left"
	    android:layout_marginRight="@dimen/input_margin_right"
	    android:textColor="@color/v1_hint"
	    android:background="@drawable/v1_login_input_bg"
	    android:paddingLeft="@dimen/input_text_padding_left"
	    />
	
	<EditText 
	    android:id="@+id/email"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/input_height"
	    android:hint="@string/email_rule"
	    android:textSize="@dimen/input_text"
	    android:layout_marginTop="@dimen/input_margin_top"
	    android:layout_marginLeft="@dimen/input_margin_left"
	    android:layout_marginRight="@dimen/input_margin_right"
	    android:inputType="textEmailAddress"
	    android:textColor="@color/v1_hint"
	    android:background="@drawable/v1_login_input_bg"
	    android:paddingLeft="@dimen/input_text_padding_left"
	    />
	
	<EditText 
	    android:id="@+id/password"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/input_height"
	    android:hint="@string/password_rule"
	    android:textSize="@dimen/input_text"
	    android:layout_marginTop="@dimen/input_margin_top"
	    android:layout_marginLeft="@dimen/input_margin_left"
	    android:layout_marginRight="@dimen/input_margin_right"
	    android:inputType="textPassword"
	    android:textColor="@color/v1_hint"
	    android:background="@drawable/v1_login_input_bg"
	    android:paddingLeft="@dimen/input_text_padding_left"
	    />
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="12dp"
	    android:layout_marginLeft="@dimen/input_margin_left"
	    android:layout_marginRight="@dimen/input_margin_right"
	    android:gravity="center_vertical"
	    android:orientation="horizontal">
	    
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="10dp"
	        android:text="@string/gender"
	        android:textSize="@dimen/input_text"
	        android:textColor="@color/v1_hint"
	        />
	    
		<RadioGroup 
		    android:id="@+id/gender"
		    android:orientation="horizontal"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content">
		    <RadioButton 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:id="@+id/male"
				android:checked="true"
				android:text="@string/male"
				android:textColor="@color/v1_hint"
		        />
		    
		    <RadioButton 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:id="@+id/female"
		        android:text="@string/female"
		        android:textColor="@color/v1_hint"
		        />
		    
		    <RadioButton 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:id="@+id/other"
		        android:text="@string/other"
		        android:textColor="@color/v1_hint"
		        />
		</RadioGroup>    
	</LinearLayout>
	
	<Button 
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/input_height"
	    android:textSize="@dimen/submit_button_text"
	    android:textColor="@color/v1_hint"
	    android:text="@string/register"
	    android:gravity="center"
	    android:id="@+id/register"
	    android:layout_marginTop="@dimen/input_margin_top"
	    android:layout_marginLeft="@dimen/input_margin_left"
	    android:layout_marginRight="@dimen/input_margin_right"
	    android:background="@drawable/v1_login_button_bg"	    
	    />
	
	 <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:layout_marginLeft="@dimen/input_margin_left"
      android:layout_marginRight="@dimen/input_margin_right">
	      <View
	          android:layout_width="wrap_content"
	          android:layout_height="2px"
	          android:background="@color/v1_input_border"
	          android:layout_gravity="center_vertical"
	          android:layout_marginRight="@dimen/input_margin_right"
	          android:layout_weight="1"/>
	      <TextView
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:gravity="center"
	          android:textColor="@color/v1_login_hint"
	          android:text="@string/Third_party_account_login"/>
	      <View
	          android:layout_width="wrap_content"
	          android:layout_height="2px"
	          android:background="@color/v1_input_border"
	          android:layout_gravity="center_vertical"
	          android:layout_marginLeft="@dimen/input_margin_left"
	          android:layout_weight="1"/>
  	</LinearLayout>
  	
	 <LinearLayout 
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:orientation="horizontal"
	     android:layout_marginTop="@dimen/input_margin_top"
	     android:layout_marginLeft="@dimen/input_margin_left"
	     android:layout_marginRight="@dimen/input_margin_right">
	     
	     <LinearLayout 
	         android:layout_width="wrap_content"
	         android:layout_height="@dimen/input_height"
	         android:orientation="horizontal"
	         android:gravity="center"
	         android:clickable="true"
	         android:id="@+id/sina_login"
	         android:layout_marginRight="15dp"
	         android:background="@drawable/v1_login_button_bg"
	         android:addStatesFromChildren="true"
	         android:layout_weight="1">
	     	<ImageView 
	         	android:src="@drawable/sina"
	         	android:layout_width="32dp"
	         	android:layout_height="32dp"
	         	android:layout_marginRight="5dp"
	         	android:contentDescription="@null"
	     	    />
	     	<TextView 
	     	    android:layout_width="wrap_content"
	     	    android:layout_height="wrap_content"
	     	    android:textSize="14sp"
	         	android:text="@string/sina_login"
	         	android:textColor="@color/v1_hint"
	     	    />
	     </LinearLayout>
	     
	     <LinearLayout 
	         android:layout_width="wrap_content"
	         android:layout_height="@dimen/input_height"
	         android:orientation="horizontal"
	         android:gravity="center"
	         android:addStatesFromChildren="true"
	         android:clickable="true"
	         android:id="@+id/qq_login"
	         android:background="@drawable/v1_login_button_bg"
	         android:layout_weight="1">
	     	<ImageView 
	         	android:src="@drawable/qq"
	         	android:layout_width="32dp"
	         	android:layout_height="32dp"
	         	android:layout_marginRight="5dp"
	         	android:contentDescription="@null"
	     	    />
	     	<TextView 
	     	    android:layout_width="wrap_content"
	     	    android:layout_height="wrap_content"
	     	    android:textSize="14sp"
	         	android:text="@string/qq_login"
	         	android:textColor="@color/v1_hint"
	     	    />
	     </LinearLayout>	     
	 </LinearLayout>
</LinearLayout>
