<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/v1_login_background"
    android:orientation="vertical" >
    
	<RelativeLayout 
        android:id="@+id/menu"
        android:orientation="vertical"
        android:background="@color/v1_actionbar" 
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">
        <Button 
            android:id="@+id/back" 
            android:layout_centerVertical="true" 
            android:layout_marginLeft="@dimen/menu_margin_left" 
            android:textSize="@dimen/menu_back_text" 
            android:textColor="@color/v1_menu_back_text"  
            android:background="@drawable/selector_btn_back" 
            android:layout_width="@dimen/menu_back_width" 
            android:layout_height="@dimen/menu_back_height" 
            android:text="@string/back" />
        <TextView 
            android:layout_centerInParent="true" 
            android:textSize="@dimen/menu_title" 
            android:textColor="@color/v1_menu_title"  
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/push_setting" />
   </RelativeLayout>
   
	<RelativeLayout 
	    android:layout_marginTop="@dimen/input_margin_top"
	    android:layout_marginLeft="@dimen/input_margin_left"
	    android:layout_marginRight="@dimen/input_margin_right"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/input_height"
	    android:clickable="true"
	    android:background="@drawable/push_setting_bg">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/turn_on_push"
	        android:textSize="@dimen/input_text"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:paddingLeft="@dimen/input_text_padding_left"
	        />
	    

	    <CheckBox 
	        android:id="@+id/turn_on"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:paddingRight="@dimen/input_text_padding_right"/>
	</RelativeLayout>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:id="@+id/content">
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="32dp"
		    android:layout_marginLeft="@dimen/input_margin_left"
		    android:layout_marginRight="@dimen/input_margin_right"
		    android:background="@drawable/push_setting_bg"
		    android:orientation="vertical">
			<RelativeLayout 
			   	android:clickable="true"
			    android:layout_width="match_parent"
			    android:layout_height="@dimen/input_height">
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/sound"
			        android:textSize="@dimen/input_text"
			        android:layout_alignParentLeft="true"
			        android:layout_centerVertical="true"
			        android:paddingLeft="@dimen/input_text_padding_left"
			        />
			    
			    <CheckBox 
			        android:id="@+id/sound"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentRight="true"
			        android:layout_centerVertical="true"
			        android:paddingRight="15dp"
			        />
			</RelativeLayout>	 
			
		    <View 
		        android:layout_width="match_parent"
		        android:layout_height="1px"
		        android:background="@color/v1_push_border"
		        />		
			<RelativeLayout 
			   	android:clickable="true"
			    android:layout_width="match_parent"
			    android:layout_height="@dimen/input_height">
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/vibrate"
			        android:textSize="@dimen/input_text"
			        android:layout_alignParentLeft="true"
			        android:layout_centerVertical="true"
			        android:paddingLeft="@dimen/input_text_padding_left"
			        />
			    
			    <CheckBox 
			        android:id="@+id/vibrate"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentRight="true"
			        android:layout_centerVertical="true"
			        android:paddingRight="15dp"
			        />
			</RelativeLayout>	
		</LinearLayout>
		
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="32dp"
		    android:layout_marginLeft="@dimen/input_margin_left"
		    android:layout_marginRight="@dimen/input_margin_right"
		    android:background="@drawable/push_setting_bg"
		    android:orientation="vertical">
			<RelativeLayout 
			    android:onClick="pushContentSetting"
			   	android:clickable="true"
			    android:layout_width="match_parent"
			    android:layout_height="@dimen/input_height">
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/push_content_setting"
			        android:textSize="@dimen/input_text"
			        android:layout_alignParentLeft="true"
			        android:layout_centerVertical="true"
			        android:paddingLeft="@dimen/input_text_padding_left"/>
			    
			    <ImageView 
			        android:id="@+id/push_content_setting"
			        android:layout_width="16dp"
			        android:layout_height="16dp"
			        android:layout_centerVertical="true"
			        android:layout_alignParentRight="true"
			        android:layout_marginRight="15dp"
			        android:src="@drawable/more"
			        android:contentDescription="@null"
			        />
			</RelativeLayout>	 
			
		    <View 
		        android:layout_width="match_parent"
		        android:layout_height="1px"
		        android:background="@color/v1_push_border"
		        />	
		        	
			<RelativeLayout 
			    android:onClick="pushKeywordSetting"
			   	android:clickable="true"
			    android:layout_width="match_parent"
			    android:layout_height="@dimen/input_height">
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/push_keyword_setting"
			        android:textSize="@dimen/input_text"
			        android:layout_alignParentLeft="true"
			        android:layout_centerVertical="true"
			        android:paddingLeft="@dimen/input_text_padding_left"
			        />
			    
			    <ImageView 
			        android:id="@+id/push_title_setting"
			        android:layout_width="16dp"
			        android:layout_height="16dp"
			        android:layout_centerVertical="true"
			        android:layout_alignParentRight="true"
			        android:layout_marginRight="15dp"
			        android:src="@drawable/more"
			        android:contentDescription="@null"
			        />
			</RelativeLayout>	
		</LinearLayout>
	</LinearLayout>
	
	<Button 
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/input_height"
	    android:textSize="@dimen/submit_button_text"
	    android:textColor="@color/v1_hint"
	    android:text="@string/save_setting"
	    android:gravity="center"
	    android:id="@+id/save_setting"
	    android:layout_marginTop="@dimen/input_margin_top"
	    android:layout_marginLeft="@dimen/input_margin_left"
	    android:layout_marginRight="@dimen/input_margin_right"
	    android:background="@drawable/v1_login_button_bg"	    
	    />	
</LinearLayout>
