<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/v1_login_background"
    android:orientation="vertical" >
    
	<RelativeLayout 
        android:id="@+id/menu"
        android:orientation="vertical"
        android:background="@color/v1_actionbar" 
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">
        <Button 
            android:id="@+id/back" 
            android:layout_centerVertical="true" 
            android:layout_marginLeft="@dimen/menu_margin_left" 
            android:textSize="@dimen/menu_back_text" 
            android:textColor="@color/v1_menu_back_text"  
            android:background="@drawable/selector_btn_back" 
            android:layout_width="@dimen/menu_back_width" 
            android:layout_height="@dimen/menu_back_height" 
            android:text="@string/back" />
        <TextView 
            android:layout_centerInParent="true" 
            android:textSize="@dimen/menu_title" 
            android:textColor="@color/v1_menu_title"  
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/enter_verify_code" />
   </RelativeLayout>
   
	<EditText 
	    android:id="@+id/verify_code"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/input_height"
	    android:layout_marginTop="@dimen/input_margin_top"
	    android:layout_marginLeft="@dimen/input_margin_left"
	    android:layout_marginRight="@dimen/input_margin_right"
	    android:hint="@string/enter_verify_code"
	    android:textSize="@dimen/input_text"
	    android:textColor="@color/v1_hint"
	    android:background="@drawable/v1_login_input_bg"
	    android:paddingLeft="@dimen/input_text_padding_left"	    
	    />
	
	<Button 
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/input_height"
	    android:textSize="@dimen/submit_button_text"
	    android:textColor="@color/v1_hint"
	    android:text="@string/submit"
	    android:gravity="center"
	    android:id="@+id/submit"
	    android:layout_marginTop="@dimen/input_margin_top"
	    android:layout_marginLeft="@dimen/input_margin_left"
	    android:layout_marginRight="@dimen/input_margin_right"
	    android:background="@drawable/v1_login_button_bg"	    
	    />
</LinearLayout>
